# diagen

./: .declaudeify-trigger  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cleetus.vrm  README.md  animation-core.mjs  audio2afan_core.mjs  audio2afan_npz.mjs  chatterbox-tts-bridge.js  cleetus.emb  client.js  discord-bot-client.js  discord-context.js  discord-handler.js  discord-vad.js  discord-voice-player.js  discord-voice-processor.js  discord-whisper.js  download-models.js  encode_voices.py  facial-player.mjs  idle-animator.mjs  index.html  inspect-log.js  llm-llamacpp.js  llm-ollama.js  llm-worker.js  omnivoice-tts-bridge.js  omnivoice_tts_server.py  package-lock.json  package.json  pocket-tts-bridge.js  pocket_tts_server.py  preamble-cache.js  qwen-dialog.mjs  (+13 more)
.github/: cache-bust
.github/workflows/: encode-voices.yml  pages.yml  quantize-model.yml  rust-build.yml
ci/encode-voices/: Cargo.toml  encode.js
crates/diagen/: Cargo.toml
crates/diagen-discord/: Cargo.toml
crates/diagen-gate/: Cargo.toml
crates/diagen-gate/src/: lib.rs
crates/diagen-llm/: Cargo.toml
crates/diagen-server/: Cargo.toml
crates/diagen-stt/: Cargo.toml
crates/diagen-tts/: Cargo.toml
crates/diagen/src/: main.rs
demo/: app-persona.js  app-tts.js  app.js  coi-serviceworker.js  index.html  tts-worker.js  vrm-viewer.js  worker.js
demo/model/: config.json
demo/voices/: cleetus.embedding.json
design/: colors_and_type.css
docs/: index.html
gh-pages-src/: index.html
gh-pages-src/demo/: Cleetus.vrm  app-tts.js  app.js  index.html  tts-worker.js  (+3 more)
test/: animation-core.test.mjs  audio2afan-core.test.mjs  audio2afan-npz.test.mjs  discord-voice-pipeline.test.mjs  download-models.test.mjs  server-routes.test.mjs  server-utils.test.mjs  tokenizer.test.mjs
tools/: encode-speakers.mjs
voices/: cleetus.json  cleetus.txt  vampire.embedding.json
(+20 files in other folders)
