[workspace]
resolver = "2"
members = [
    "crates/diagen-tts",
    "crates/diagen-llm",
    "crates/diagen-stt",
    "crates/diagen-discord",
    "crates/diagen-gate",
    "crates/diagen-server",
    "crates/diagen",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["diagen contributors"]
repository = "https://github.com/AnEntrypoint/diagen"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
dashmap = "6"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
