[package]
name = "diagen-gate"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
diagen-tts = { path = "../diagen-tts" }
diagen-llm = { path = "../diagen-llm" }
